# Tello-Python-Edu

./: .gitignore  command.txt  pyproject.toml  tello_test.py
Single_Tello_Test/: tello_test.py
Tello_keyboard/: README.md  tello_controls.py  tello_core.py  tello_start.py
starter/: main.py
starter/input/: command.py  constants.py
starter/tello/: stats.py  tello.py
